@@ -14,7 +14,13 @@
  * RCS: @(#) $Id$
  */
 
-/* #define _WIN32_WINNT	0x0500 */
+/* TODO: This file does not compile in UNICODE mode.
+ * See [Freq 2965056]: Windows build with -DUNICODE
+ * and
+ * [Bug 3069278]: breakage on head Windows triggered by install-tzdata
+ */
+#undef UNICODE
+#undef _UNICODE
 
 #include "tclWinInt.h"
 #include "tclFileSystem.h"
@@ -202,7 +208,7 @@ WinLink(
     const TCHAR *linkTargetPath,
     int linkAction)
 {
-    TCHAR tempFileName[MAX_PATH];
+    TCHAR tempFileName[MAX_PATH * 2];
     TCHAR *tempFilePart;
     DWORD attr;
 
@@ -323,7 +329,7 @@ static Tcl_Obj *
 WinReadLink(
     const TCHAR *linkSourcePath)
 {
-    TCHAR tempFileName[MAX_PATH];
+    TCHAR tempFileName[MAX_PATH * 2];
     TCHAR *tempFilePart;
     DWORD attr;
 
@@ -1924,7 +1930,7 @@ TclpGetCwd(
     Tcl_DString *bufferPtr)	/* Uninitialized or free DString filled with
 				 * name of current directory. */
 {
-    TCHAR buffer[MAX_PATH];
+    TCHAR buffer[MAX_PATH * 2];
     char *p;
 
     if (tclWinProcs->getCurrentDirectoryProc(MAX_PATH, buffer) == 0) {
@@ -2171,7 +2177,7 @@ NativeDev(
 {
     int dev;
     Tcl_DString ds;
-    TCHAR nativeFullPath[MAX_PATH];
+    TCHAR nativeFullPath[MAX_PATH * 2];
     TCHAR *nativePart;
     const char *fullPath;
 
@@ -2345,7 +2351,7 @@ ClientData
 TclpGetNativeCwd(
     ClientData clientData)
 {
-    TCHAR buffer[MAX_PATH];
+    TCHAR buffer[MAX_PATH * 2];
 
     if (tclWinProcs->getCurrentDirectoryProc(MAX_PATH, buffer) == 0) {
 	TclWinConvertError(GetLastError());
@@ -2463,7 +2469,7 @@ TclpFilesystemPathType(
 {
 #define VOL_BUF_SIZE 32
     int found;
-    TCHAR volType[VOL_BUF_SIZE];
+    TCHAR volType[VOL_BUF_SIZE * 2];
     char *firstSeparator;
     const char *path;
     Tcl_Obj *normPath = Tcl_FSGetNormalizedPath(NULL, pathPtr);
